cmake_minimum_required(VERSION 3.23)
project(MCTS)

set(CMAKE_CXX_STANDARD 14)
if(APPLE)
    set(OpenMP_C "${CMAKE_C_COMPILER}")
    set(OpenMP_C_FLAGS "-Xclang -fopenmp -I/usr/local/Cellar/libomp/15.0.4/include")
    set(OpenMP_C_LIB_NAMES "libomp")
    set(OpenMP_libomp_LIBRARY "omp")

    set(OpenMP_CXX "${CMAKE_CXX_COMPILER}")
    set(OpenMP_CXX_FLAGS "-Xclang -fopenmp -I/usr/local/Cellar/libomp/15.0.4/include")
    set(OpenMP_CXX_LIB_NAMES "libomp")
    set(OpenMP_libomp_LIBRARY "omp")

    link_directories("/usr/local/Cellar/libomp/15.0.4/lib/")
    add_executable(MCTS main.cpp tinyxml2.cpp)
    target_link_libraries(MCTS PRIVATE "/usr/local/Cellar/libomp/15.0.4/lib/")
endif()

if(UNIX AND NOT APPLE)
    find_package(OpenMP)
    if (OPENMP_FOUND)
        set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
        set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
        set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
    endif()
    add_executable(MCTS main.cpp tinyxml2.cpp)
endif()